<resources>
    <string name="app_name">Pauline Prayer Book</string>
    <string name="channel_name">Pauline Prayer Book</string>
    <string name="channel_description">Pauline Prayer Book</string>
    <string name="settings">Settings</string>
    <string name="index">Index</string>
    <string name="about">About</string>
    <string name="print">Print</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_index">Index</string>

    <string name="today_feast">Today\'s Feast</string>
    <string name="tommorrow_feast">Tomorrow\'s Feast</string>

    <!-- Strings related to Settings -->
    <string-array name="pref_language_titles">
        <item>English</item>
        <item>Croatian</item>
        <item>German</item>
        <item>Italian</item>
        <item>Latin</item>
        <item>Polish</item>
        <item>Slovak</item>
    </string-array>
    <string-array name="pref_language_values">
        <item>en</item>
        <item>hr</item>
        <item>de</item>
        <item>it</item>
        <item>la</item>
        <item>pl</item>
        <item>sk</item>
    </string-array>
    <string name="pref_language">Prayer Language</string>
    <string name="pref_language_default">en</string>
    <string name="pref_language_title">Language</string>

    <string name="pref_settings_title">Settings</string>
    <string name="pref_font_size_default">14</string>
    <string name="pref_font_size">Font Size</string>
    <string name="notifications">Notifications</string>
    <string name="dark_mode">Dark Mode</string>

    <string-array name="pref_font_size_titles">
        <item>8</item>
        <item>11</item>
        <item>14</item>
        <item>17</item>
        <item>20</item>
        <item>24</item>
        <item>28</item>
        <item>36</item>
        <item>48</item>
    </string-array>
    <string-array name="pref_font_size_values">
        <item>8</item>
        <item>11</item>
        <item>14</item>
        <item>17</item>
        <item>20</item>
        <item>24</item>
        <item>28</item>
        <item>36</item>
        <item>48</item>
    </string-array>
</resources>
