<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/pref_font_size_default"
        android:entries="@array/pref_font_size_titles"
        android:entryValues="@array/pref_font_size_values"
        android:key="font_size_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_font_size" />

    <ListPreference
        android:defaultValue="@string/pref_language_default"
        android:entries="@array/pref_language_titles"
        android:entryValues="@array/pref_language_values"
        android:key="language_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_language" />


    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="notifications"
        android:title="@string/notifications" />


    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="dark_mode"
        android:title="@string/dark_mode"/>

</PreferenceScreen>